# move_bot_sim

./: README.md
kinova_gen3_description/: CMakeLists.txt  package.xml
kinova_gen3_description/urdf/: GEN3-7DOF-NOVISION_FOR_URDF_ARM_V12.urdf  GEN3-7DOF-VISION_ARM_URDF_V12.urdf  GEN3-7DOF_BRAKES_NO-VISION_URDF_ARM_V01.urdf  GEN3-7DOF_BRAKES_VISION_URDF_ARM_V01.urdf  gen3_macro.xacro
move_bot_description/: CMakeLists.txt  package.xml
move_bot_description/urdf/: move_bot.urdf  move_bot.xacro
move_bot_gazebo/: CMakeLists.txt  package.xml
move_bot_gazebo/config/: ros_controllers.yaml
move_bot_gazebo/launch/: move_bot_gazebo.launch  move_bot_move_base.launch  ros_controllers.launch
move_bot_gazebo/meshes/: base_bot_platform.stl
move_bot_gazebo/scripts/: move_bot_control.py
move_bot_gazebo/urdf/: antenna.urdf.xacro  gen3_macro.xacro  gen3_transmission_macro.xacro  move_bot.xacro  omni_base.urdf.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro  wheel.gazebo.xacro  wheel.urdf.xacro
move_bot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
move_bot_moveit_config/config/: fake_controllers.yaml  gazebo_move_bot.urdf  joint_limits.yaml  kinematics.yaml  move_bot.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
move_bot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  (+14 more)
move_bot_visualisation/: CMakeLists.txt  package.xml
omni_base_description/: package.xml
robotiq_2f_85_gripper_description/: CMakeLists.txt  package.xml
(+13 files in other folders)
