<?xml version="1.0"?>
<package format="2">
  <name>kinova_gen3_description</name>
  <version>1.0.0</version>
  <description>Kinova Gen3 7DoF description package</description>
  <license>BSD</license>
  <author email="juniorsundar@gmail.com">Junior Sundar</author>
  <maintainer email="juniorsundar@gmail.com">Junior Sundar</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
